--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "sets-game-browser",
+  "name": "sets-game",
   "version": "0.0.1",
   "scripts": {
     "clean": "if exist dist rmdir /s /q dist && mkdir dist",
     "build": "npm run clean && npm run build:work",
     "web": "npm run build && npm run web:work",
-    "build:work": "tsc -d",
+    "build:work": "tsc",
     "web:work": "browserify dist/index.js -o dist/bundle.js"
   },
   "dependencies": {
     "ipfs-pubsub-room": "^1.4.0",
-    "sets-game-engine": "../Engine",
+    "sets-game-engine": "git://github.com/mothepro/sets-game-engine.git",
     "util": "^0.11.0"
   },
   "devDependencies": {
