Make use of React & Material UI

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 node_modules/
 dist/*
 npm-debug.log
+package-lock.json
+index.dev.html
 
 # We need these in the repo for github pages.
-!dist/bundle.js
+!dist/bundle.min.js
