--- a/package.json
+++ b/package.json
@@ -2,24 +2,40 @@
   "name": "sets-game",
   "version": "0.0.1",
   "scripts": {
-    "clean": "if exist dist rmdir /s /q dist && mkdir dist",
-    "build": "npm run clean && npm run build:work",
-    "web": "npm run build && npm run web:work",
-    "build:work": "tsc",
-    "web:work": "browserify dist/index.js -o dist/bundle.js"
+    "compile": "tsc",
+    "build:dev": "simplifyify src/index.tsx -o dist/bundle.js --debug --bundle",
+    "build:prod": "simplifyify src/index.tsx -o dist/bundle.js --minify",
+    "build": "simplifyify src/index.tsx -o dist/bundle.js --debug --bundle --minify"
   },
   "dependencies": {
-    "ipfs-pubsub-room": "^1.4.0",
-    "sets-game-engine": "git://github.com/mothepro/sets-game-engine.git",
-    "util": "^0.11.0"
+    "@material-ui/core": "^3.4.0",
+    "p2p-lobby": "0.0.14",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
+    "sets-game-engine": "git://github.com/mothepro/sets-game-engine.git"
   },
   "devDependencies": {
     "@types/node": "^10.11.3",
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
     "browserify": "^16.2.3",
+    "browserify-shim": "^3.8.14",
     "ipfs": "^0.32.3",
     "mocha": "^5.2.0",
     "should": "^13.2.3",
+    "simplifyify": "^7.0.0",
     "strict-event-emitter-types": "^2.0.0",
     "typescript": "^3.1.1"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "p2p-lobby": "global:p2p",
+    "react": "global:React",
+    "react-dom": "global:ReactDOM",
+    "@material-ui/core": "global:material-ui"
   }
 }
