--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,11 @@
     "outDir": "dist/",
     "declaration": true,
     "downlevelIteration": true,
+    "jsx": "react",
     "lib": ["esnext", "dom"]
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist/"
   ]
 }
