Move compiled builds for browser to umd dir

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-.idea/
-node_modules/
+.idea
+node_modules
 dist/*
 npm-debug.log
 package-lock.json
 index.dev.html
 
 # We need these in the repo for github pages.
-!dist/bundle.min.js
+!dist/umd/
