--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "dist/",
     "declaration": true,
     "downlevelIteration": true,
+    "resolveJsonModule": true,
     "jsx": "react",
     "lib": ["esnext", "dom"]
   },
