--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "sets-game",
   "version": "0.0.1",
   "scripts": {
-    "compile": "tsc",
     "start": "webpack-dev-server --mode development",
     "build:dev": "webpack",
-    "build:prod": "webpack -p"
+    "build:prod": "webpack -p",
+    "predeploy": "npm run build:prod",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@material-ui/core": "^3.4.0",
@@ -19,6 +20,7 @@
     "@types/node": "^10.11.3",
     "@types/react": "^16.7.0",
     "@types/react-dom": "^16.0.9",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
     "source-map-loader": "^0.2.4",
