--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.2",
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "dev": "webpack",
+    "dev": "webpack --mode development",
     "prod": "webpack -p",
     "predeploy": "npm run prod",
     "deploy": "gh-pages -d bin"
@@ -30,6 +30,7 @@
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "webpack-pwa-manifest": "^3.7.1"
   }
 }
