--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^10.11.3",
     "@types/react": "^16.7.0",
     "@types/react-dom": "^16.0.9",
+    "clean-webpack-plugin": "^1.0.0",
     "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
