--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.4.0",
+    "offline-plugin": "^5.0.6",
     "p2p-lobby": "^0.1.1",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
