--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.4.0",
-    "offline-plugin": "^5.0.6",
     "p2p-lobby": "^0.1.1",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
@@ -22,9 +21,11 @@
     "@types/react": "^16.7.0",
     "@types/react-dom": "^16.0.9",
     "clean-webpack-plugin": "^1.0.0",
+    "favicons-webpack-plugin": "0.0.9",
     "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
+    "offline-plugin": "^5.0.6",
     "source-map-loader": "^0.2.4",
     "strict-event-emitter-types": "^2.0.0",
     "ts-loader": "^5.3.0",
